Fix: #1999 - Place hierarchy Individual spacing

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -522,6 +522,9 @@
 	list-style-type: none;
 }
 
+.d-table-cell {
+	padding-right: 5px;
+}
 
 /*
  * Calendar
